Refactor. Add OpenApi for webdlux. Add /search